# RBE2002

./: .gitignore  CommandList.txt  Doxyfile  Makefile  PIDBaseData.ods  ReadMe.md  index.html  style.css  weekly_gantt.gan
Final_Project/: Final_Project.ino
cpp/: .gitignore  CMakeLists.txt  Makefile
cpp/encoder_counter/: Odom.cpp  PID.cpp  RegulatedMotor.cpp
cpp/lidar/: CMakeLists.txt  DriveMotor.cpp  Lidar.hpp  Main.cpp  Makefile  ReadMe.md
cpp/lidar/lidar/: CandleDetector.cpp  CandleDetector.hpp  DriveMotor.cpp  Lidar.cpp  Main.cpp  Ransac.hpp
cpp/lidar/main/: Main.cpp
cpp/lidar/shared/: CandleDetector.cpp  CandleDetector.hpp  DriveMotor.cpp  FireFinder.cpp  Lidar.cpp  Ransac.cpp
cpp/lidar/test/: point.cpp
cpp/shared/: CandleDetector.cpp  CandleDetector.hpp  DriveMotor.cpp  Odom.cpp  Odom.hpp  PID.cpp  PID.hpp  Point.hpp  RegulatedMotor.hpp
cpp/test/: Main.cpp  height.cpp  odom.cpp  point.cpp  search.cpp  teleop.cpp  wallFollow.cpp
html/: CandleDetector_8cpp.html  CandleDetector_8cpp_source.html  CandleDetector_8hpp.html  CandleDetector_8hpp_source.html  Docs_8h.html  Docs_8h_source.html  DriveMotor_8cpp.html  DriveMotor_8cpp_source.html  DriveMotor_8hpp.html  DriveMotor_8hpp_source.html  DriveUntilCandle_8cpp.html  DriveUntilCandle_8cpp_source.html  DriveUntilCandle_8hpp.html  DriveUntilCandle_8hpp_source.html  Encoder_8hpp.html  Encoder_8hpp_source.html  Extinguisher_8cpp.html  Extinguisher_8cpp_source.html  Extinguisher_8hpp.html  Extinguisher_8hpp_source.html  Fan_8cpp.html  Fan_8cpp_source.html  Fan_8hpp.html  Fan_8hpp_source.html  Gyro_8cpp.html  (+186 more)
(+452 files in other folders)
